--- a/KeepInControl/App.xaml
+++ b/KeepInControl/App.xaml
@@ -2,14 +2,8 @@
 <Application
     x:Class="KeepInControl.App"
     xmlns="http://xamarin.com/schemas/2014/forms"
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
     <Application.Resources>
-        <ResourceDictionary>
-            <Color x:Key="Primary">#010a43</Color>
-            <Color x:Key="PrimaryDark">#00062b</Color>
-        </ResourceDictionary>
+        <ResourceDictionary Source="/Resources/Themes/DarkTheme.xaml" />
     </Application.Resources>
 </Application>
