--- a/KeepInControl/AppShell.xaml
+++ b/KeepInControl/AppShell.xaml
@@ -11,15 +11,15 @@
     <Shell.Resources>
         <ResourceDictionary>
             <Style x:Key="BaseStyle" TargetType="Element">
-                <Setter Property="Shell.BackgroundColor" Value="{StaticResource Primary}" />
-                <Setter Property="Shell.ForegroundColor" Value="White" />
-                <Setter Property="Shell.TitleColor" Value="White" />
+                <Setter Property="Shell.BackgroundColor" Value="{DynamicResource BackgroundDark}" />
+                <Setter Property="Shell.ForegroundColor" Value="{DynamicResource Primary}" />
+                <Setter Property="Shell.TitleColor" Value="{DynamicResource Primary}" />
                 <Setter Property="Shell.DisabledColor" Value="#B4FFFFFF" />
                 <Setter Property="Shell.UnselectedColor" Value="#95FFFFFF" />
-                <Setter Property="Shell.TabBarBackgroundColor" Value="{StaticResource Primary}" />
-                <Setter Property="Shell.TabBarForegroundColor" Value="White" />
+                <Setter Property="Shell.TabBarBackgroundColor" Value="{DynamicResource BackgroundDark}" />
+                <Setter Property="Shell.TabBarForegroundColor" Value="{DynamicResource Primary}" />
                 <Setter Property="Shell.TabBarUnselectedColor" Value="#95FFFFFF" />
-                <Setter Property="Shell.TabBarTitleColor" Value="White" />
+                <Setter Property="Shell.TabBarTitleColor" Value="{DynamicResource Primary}" />
             </Style>
             <Style BasedOn="{StaticResource BaseStyle}" TargetType="TabBar" />
         </ResourceDictionary>
