--- a/KeepInControl/Resources/Themes/LightTheme.xaml
+++ b/KeepInControl/Resources/Themes/LightTheme.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:d="http://xamarin.com/schemas/2014/forms/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Source="DefaultTheme.xaml"
     mc:Ignorable="d">
 
     <Color x:Key="Background">#fafafa</Color>
