--- a/KeepInControl/Resources/Styles/SizeStyle.xaml
+++ b/KeepInControl/Resources/Styles/SizeStyle.xaml
@@ -2,6 +2,7 @@
 <?xaml-comp compile="true" ?>
 
 <ResourceDictionary xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+    <x:Double x:Key="SpacingNone">0</x:Double>
     <x:Double x:Key="SpacingTiny">4</x:Double>
     <x:Double x:Key="SpacingMicro">8</x:Double>
     <x:Double x:Key="SpacingSmall">12</x:Double>
