--- a/KeepInControl/Resources/Themes/DefaultTheme.xaml
+++ b/KeepInControl/Resources/Themes/DefaultTheme.xaml
@@ -4,6 +4,15 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
+    <x:String x:Key="FontOfIcons">FontAwesome</x:String>
+
+    <Color x:Key="Background">#fa000d3e</Color>
+    <Color x:Key="BackgroundDark">#000524</Color>
+
+    <Color x:Key="Primary">#fafafa</Color>
+    <Color x:Key="Secondary">#f2177f04</Color>
+    <Color x:Key="Ternary">#f204417f</Color>
+
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/Resources/Styles/SizeStyle.xaml" />
         <ResourceDictionary Source="/Resources/Styles/PageStyle.xaml" />
